Remove duplicate entry for ms-python.vscode-pylance in extensions.json

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,6 @@
     "ms-python.python",
     "vscode-icons-team.vscode-icons",
     "GitHub.copilot-chat",
-    "ms-python.vscode-pylance",
-    "vsls-contrib.codetour"
+    "ms-python.vscode-pylance"
   ]
 }
